--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
 	[Declaration]
  	1_Import
@@ -15,9 +14,9 @@
 	[Media Screen]
 	1_Retina Display and Other Displays
 
-	[할일]
-	# Z-index 정리.
-	# 모듈화 더 디테일하게 진행하기.
+	[To Do List]
+	# Z-index
+	# Modularization
 */
 /* ------------------------ [Declaration] ------------------------ */
 /* 1_Import */
@@ -224,13 +223,11 @@
   transform: scale(1.01);
 }
 #wrap > header > * {
-  /* Import */
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
   align-content: space-between;
-  /* Selector */
   margin: 0 5px;
 }
 #wrap > header > .util button {
@@ -263,13 +260,12 @@
   display: none;
   position: absolute;
   z-index: 30;
-  width: 100px;
-  margin-left: -34px;
+  width: 80px;
+  margin-left: -25px;
   padding-top: 10px;
 }
 #wrap > header > .util > .profile > nav > ul > li > a {
   display: block;
-  border: 1px solid #ededed;
   background-color: white;
   text-align: center;
   font-size: 0.875em;
@@ -1041,7 +1037,7 @@
   color: #999 !important;
 }
 #wrap > section .absent_post:before {
-  content: "죄송합니다만 \a글을 찾지 못했습니다.";
+  content: "Not Found.";
   display: block;
   margin-bottom: 7px;
   font-weight: bold;
@@ -1298,7 +1294,7 @@
   content: "'";
 }
 #tt-body-search .post-header span:after {
-  content: "'의 검색결과";
+  content: "'";
 }
 
 .side-menu #wrap > header {
