mod pug (refactoring)

--- a/views/body/wrap/section.pug
+++ b/views/body/wrap/section.pug
@@ -1,7 +1,6 @@
 section
   //- ads upper
-  .
-    [##_revenue_list_upper_##]
+  | [##_revenue_list_upper_##]
 
   include section/list.pug
   include section/article.pug
@@ -9,5 +8,4 @@ section
   include section/paging.pug
 
   //- ads lower
-  .
-    [##_revenue_list_lower_##]
+  | [##_revenue_list_lower_##]
