--- a/views/body/wrap/section/list.pug
+++ b/views/body/wrap/section/list.pug
@@ -1,24 +1,16 @@
-.
-  <s_list>
-    <div class="post-header">
-      <h1><span>[##_list_conform_##]</span><em> [##_list_count_##]</em></h1>
-    </div>
+s_list
+  .post-header
+    <h1><span>[##_list_conform_##]</span><em> [##_list_count_##]</em></h1>
 
-    <s_list_empty>
-      <div class="not-found">
-        <ul>
-          <li>입력하신 단어의 철자가 정확한지 확인해 보세요.</li>
-          <li>검색어의 단어 수를 줄이거나, 보다 일반적인 단어로 검색해 보세요.</li>
-          <li>두 단어 이상의 키워드로 검색 하신 경우, 정확하게 띄어쓰기를 한 후 검색해 보세요.</li>
-        </ul>
-        <ul class="tag">
-          <li>선택하신 태그에 해당하는 글이 없습니다.</li>
-          <li>다른 태그를 선택하시거나, 검색 기능을 활용해 보세요.</li>
-        </ul>
-        <ul class="category">
-          <li>선택하신 카테고리에 해당하는 글이 없습니다.</li>
-          <li>다른 카테고리를 선택하시거나, 검색 기능을 활용해 보세요.</li>
-        </ul>
-      </div>
-    </s_list_empty>
-  </s_list>
+  s_list_empty
+    .not-found
+      ul
+        li 입력하신 단어의 철자가 정확한지 확인해 보세요.
+        li 검색어의 단어 수를 줄이거나, 보다 일반적인 단어로 검색해 보세요.
+        li 두 단어 이상의 키워드로 검색 하신 경우, 정확하게 띄어쓰기를 한 후 검색해 보세요.
+      ul.tag
+        li 선택하신 태그에 해당하는 글이 없습니다.
+        li 다른 태그를 선택하시거나, 검색 기능을 활용해 보세요.
+      ul.category
+        li 선택하신 카테고리에 해당하는 글이 없습니다.
+        li 다른 카테고리를 선택하시거나, 검색 기능을 활용해 보세요.
