--- a/views/body/wrap/header.pug
+++ b/views/body/wrap/header.pug
@@ -1,8 +1,8 @@
 header
   .util
-    .menu
+    #menu
       button(type="button")
-    .profile
+    #profile
       button(type="button") [##_blog_image_##]
       nav
         ul
@@ -10,11 +10,11 @@ header
             a(href="[##_owner_url_##]") 관리
           li
             a(href="[##_owner_url_##]/entry/post") 글쓰기
-          li.login
+          li#login
             a(href="#") 로그인
-          li.logout
+          li#logout
             a(href="#") 로그아웃
-    .search
+    #search
       s_search
         button(type="submit" onclick="[##_search_onclick_submit_##]")
         label(for="[##_search_name_##]" class="screen_out")
