--- a/views/body/wrap/section/list.pug
+++ b/views/body/wrap/section/list.pug
@@ -1,6 +1,6 @@
 s_list
   .post-header
-    <h1><span>[##_list_conform_##]</span><em> [##_list_count_##]</em></h1>
+    h1 <span>[##_list_conform_##]</span><em> [##_list_count_##]</em>
 
   s_list_empty
     .not-found
