add react and mod dev-dependencies

--- a/index.pug
+++ b/index.pug
@@ -12,4 +12,8 @@ html
     //- html
     include views/head.pug
 
-  include views/body.pug
+  //- include views/body.pug
+
+  body
+    #app
+    #appt
